# TransformerEngine

./: .gitignore  README.md  cu_demo.cu  module.py  pywrap_transformer_engine.cu  run_demo.py  run_sanity.py  setup.py  test.py  test_pybind.py
common/: common.h  logging.h  transformer_engine.h  utils.cuh
common/gemm/: cublaslt_gemm.h
common/util/: vectorized_pointwise.h
tests/: fp8_layers_test.py
transformer_engine/: CMakeLists.txt  __init__.py
transformer_engine/common/: CMakeLists.txt
transformer_engine/tensorflow/: CMakeLists.txt  __init__.py  module.py
transformer_engine/tensorflow/src/: pywrap_transformer_engine.cu
